# atcoder_rust

./: .envrc  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  Pipfile  README.md  atcoder_tool.py  calc.py  completion.zsh  contest.py  diff.py  hoge.py  package-lock.json  pyproject.toml  rustfmt.toml  script.sh  snippet.sh  test.txt  testcase_generator.py  verify_lib改修.md
src/bench/: Cargo.toml  README.md
src/bench/src/: add_vs_affine.rs  beats_vs_lazy.rs  bench_util.rs  range_sum.rs
src/contest/: CLAUDE.md  Cargo.toml  script.sh  template.rs  template2.rs  template_a.rs  template_test.rs
src/contest/2021/abc120/: maind2.rs
src/contest/2021/abc206/: maind.rs
src/contest/2021/abc207/: mainb.rs  mainc.rs
src/contest/2021/abc208/: maind.rs
src/contest/2021/abc211/: mainb.rs  mainc.rs  maind.rs
src/contest/2021/abc219/: maina.rs  mainb2.rs  mainc2.rs
src/contest/2021/abc220/: maina.rs  mainb.rs
src/contest/2021/abc225/: mainb.rs  maind.rs
src/contest/2021/abc226/: maina.rs  maine2.rs
src/contest/2021/arc126/: maina.rs
src/contest/2021/arc127/: maina.rs
src/contest/2021/genocon2021/: mainb2.rs
src/contest/2023/: Cargo.toml
src/contest/2023/_misc/: abc297_g.rs  icpc_1126_a.rs
src/contest/2023/_misc/0917_midori_ika/: a.rs  b.rs  c.rs  d.rs  e.rs  f.rs
src/contest/2023/_misc/1202_midori_ika/: _hello.rs  _template.rs  a.rs  b.rs  c.rs  d.rs  e.rs  f.rs  g.rs  h.rs
src/contest/2023/abc2xx/b/: 200.rs  201.rs  202.rs  203.rs  204.rs  205.rs  206.rs  207.rs  208.rs  209.rs  210.rs  211.rs  212.rs  213.rs  214.rs  215.rs  216.rs  217.rs  218.rs  219.rs  ABC2xx_b.md  prepare.py  prepare_old.py  script.sh
src/contest/2023/abc309/: maina.rs  maina_old.rs  mainb old.rs  mainb.rs  maind copy.rs  maind.rs  maine.rs
src/contest/2023/abc311/: a.rs  abc311.md  b.rs  c.rs  d.rs  d_old.rs  e.rs  e2.rs  maina.rs  mainb.rs  mainc.rs  maind.rs
src/contest/2023/abc312/: a.rs  abc312.md  b.rs  c.rs  d.rs  f.rs
src/contest/2023/abc317/: script.sh
src/contest/2023/abc317/a/: a.rs
src/contest/2023/abc317/b/: b.rs
src/contest/2023/abc317/c/: c.rs
src/contest/2023/abc317/d/: d.rs
src/contest/2023/abc317/e/: e.rs
src/contest/2023/abc319/a/: a.rs
src/contest/2023/abc319/b/: b.rs
src/contest/2023/abc319/c/: c.rs
src/contest/2023/abc319/d/: d.rs
src/contest/2023/abc319/e/: e.rs
src/contest/2023/abc320/a/: a.rs
src/contest/2023/abc320/b/: b.rs
src/contest/2023/abc320/c/: c.rs
src/contest/2023/abc320/d/: d.rs
src/contest/2023/abc320/e/: e.rs  e_old.rs
src/contest/2023/abc321/a/: a.rs
src/contest/2023/abc321/b/: b.rs
src/contest/2023/abc321/c/: c.rs
src/contest/2023/abc321/d/: d.rs
src/contest/2023/abc321/e/: e.rs
src/contest/2023/abc321/f/: f.rs
src/contest/2023/abc322/a/: a.rs
src/contest/2023/abc322/b/: b.rs
src/contest/2023/abc322/c/: c.rs
src/contest/2023/abc322/d/: d.rs
src/contest/2023/abc322/e/: e.rs
src/contest/2023/abc323/a/: a.rs
src/contest/2023/abc323/b/: b.rs
src/contest/2023/abc323/c/: c.rs
src/contest/2023/abc325/: script.sh
src/contest/2023/abc327/: script.sh
src/contest/2023/abc334/: script.sh
src/contest/2024/: Cargo.toml
src/contest/2024/_misc/: abc141_e.rs  abc143_d.rs  abc167_f.rs  abc198_f.rs  abc237_e.rs  abc269_e.rs  abc299_d.rs  abc307_c.rs  abc330_e.rs  abc331_f.rs  abc331_f_old.rs  abc343_f.rs  abc343_f1.rs  abc343_f2.rs  abc343_f_old.rs  acl_lazy_segtree.rs  acl_lcp.rs  arc037_c.rs  exawizards2019_d.rs  nim_interactive.rs  segment_with_maximum_sum.rs  tenka1_2019_d.rs
src/contest/2024/abc351/: experiment.ipynb
src/contest/2024/abc352/: experiment.ipynb
src/contest/2024/arc172/: script.sh
src/contest/2024/arc173/: script.sh
src/contest/2024/arc177/: experiment.ipynb
src/contest/2024/arc179/: experiment.ipynb
src/contest/2025/: Cargo.toml
src/contest/2025/_misc/: abc340_f.rs
src/contest/2026/: Cargo.toml
src/contest/abc120/: maind.rs  maind2.rs
src/contest/abc206/: mainb.rs  mainc.rs  maind.rs
src/contest/abc207/: mainb.rs  mainc.rs
src/contest/abc208/: mainb.rs  mainc.rs  maind.rs
src/contest/abc209/: mainb.rs  mainc.rs  maind.rs
src/contest/abc210/: mainb.rs  mainc.rs  maind.rs
src/contest/abc211/: mainc.rs  maind.rs  maind2.rs
src/contest/abc219/: mainb.rs  mainc.rs  maind.rs  maind2.rs
src/contest/abc220/: mainb.rs  mainc.rs  maind.rs  mainf.rs
src/contest/abc225/: maina.rs  mainc.rs  maind2.rs
src/contest/abc226/: mainb.rs  mainc.rs  maind.rs  maine.rs  maine3.rs  maine4.rs
src/contest/abc228/: maina.rs  mainb.rs  mainc.rs  maind.rs
src/contest/abc309/: mainc.rs  template.rs
src/contest/abc311/: mainc.rs  template.rs
src/contest/algo_method/: main.rs  snippet.rs
src/contest/algo_method/ds/: ds_snippets.rs
src/contest/algo_method/math/: main_581_slope2.rs  main_651_times2.rs
src/contest/arc126/: mainb.rs
src/contest/arc127/: mainb.rs
src/contest/genocon2021/: mainb.rs  mainb3.rs
src/example/: CLAUDE.md  Cargo.toml  acl_string.rs  bfs.rs  dfs.rs  dfs_graph.rs  dfs_multi_loop.rs  digit_dp.rs  dp.rs  general.rs  graph.rs  integer.rs  interval_dp.rs  knapsack.rs  lib.rs  math.rs  next_permutation.rs  random.rs  shakutori.rs  shortest_path.rs  twelvefold_way_enumerate.rs
src/example/dp/: bit_dp.rs  digit_dp.rs  knapsack.rs  knapsack_struct_dp.rs  subset_sum.rs
src/example/graph/: dfs_graph.rs  dfs_multi_loop.rs  kruskal.rs  reroot.rs  shortest_path.rs  tree_dp.rs  tree_path_aggr.rs
src/example/graph/reroot/: reroot_diam_lib.rs  reroot_diam_nolib.rs
src/example/graph/tree_dp/: tree_dp_diam.rs  tree_dp_edge.rs  tree_dp_vertex.rs
src/example/math/: combination.rs  combinations.rs  combinations_with_replacement.rs  enumeration.rs  number_theory.rs  partition.rs  permutation.rs  surj.rs
src/example/math/enumeration/: bell.rs  combinations.rs  stirling.rs
src/example/shakutori/: max_len_with_sum_le.rs  max_len_with_types_le.rs  min_len_with_types_ge.rs
src/library_checker/: Cargo.toml  cycle_detection undirected.rs  cycle_detection.rs  cycle_detection_undirected.rs  template.rs  tree_diameter.rs
(+1401 files in other folders)
