[package]
name = "atcoder_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "abc2xx_b_280"
path = "src/contest/2023/abc2xx/b/280/280.rs"

[[bin]]
name = "abc2xx_b_281"
path = "src/contest/2023/abc2xx/b/281/281.rs"

[[bin]]
name = "abc2xx_b_282"
path = "src/contest/2023/abc2xx/b/282/282.rs"

[[bin]]
name = "abc2xx_b_283"
path = "src/contest/2023/abc2xx/b/283/283.rs"

[[bin]]
name = "abc2xx_b_284"
path = "src/contest/2023/abc2xx/b/284/284.rs"

[[bin]]
name = "abc2xx_b_285"
path = "src/contest/2023/abc2xx/b/285/285.rs"

[[bin]]
name = "abc2xx_b_286"
path = "src/contest/2023/abc2xx/b/286/286.rs"

[[bin]]
name = "abc2xx_b_287"
path = "src/contest/2023/abc2xx/b/287/287.rs"

[[bin]]
name = "abc2xx_b_288"
path = "src/contest/2023/abc2xx/b/288/288.rs"

[[bin]]
name = "abc2xx_b_289"
path = "src/contest/2023/abc2xx/b/289/289.rs"

[[bin]]
name = "abc2xx_b_270"
path = "src/contest/2023/abc2xx/b/270/270.rs"

[[bin]]
name = "abc2xx_b_271"
path = "src/contest/2023/abc2xx/b/271/271.rs"

[[bin]]
name = "abc2xx_b_272"
path = "src/contest/2023/abc2xx/b/272/272.rs"

[[bin]]
name = "abc2xx_b_273"
path = "src/contest/2023/abc2xx/b/273/273.rs"

[[bin]]
name = "abc2xx_b_274"
path = "src/contest/2023/abc2xx/b/274/274.rs"

[[bin]]
name = "abc2xx_b_275"
path = "src/contest/2023/abc2xx/b/275/275.rs"

[[bin]]
name = "abc2xx_b_276"
path = "src/contest/2023/abc2xx/b/276/276.rs"

[[bin]]
name = "abc2xx_b_277"
path = "src/contest/2023/abc2xx/b/277/277.rs"

[[bin]]
name = "abc2xx_b_278"
path = "src/contest/2023/abc2xx/b/278/278.rs"

[[bin]]
name = "abc2xx_b_279"
path = "src/contest/2023/abc2xx/b/279/279.rs"

[[bin]]
name = "abc2xx_b_260"
path = "src/contest/2023/abc2xx/b/260/260.rs"

[[bin]]
name = "abc2xx_b_261"
path = "src/contest/2023/abc2xx/b/261/261.rs"

[[bin]]
name = "abc2xx_b_262"
path = "src/contest/2023/abc2xx/b/262/262.rs"

[[bin]]
name = "abc2xx_b_263"
path = "src/contest/2023/abc2xx/b/263/263.rs"

[[bin]]
name = "abc2xx_b_264"
path = "src/contest/2023/abc2xx/b/264/264.rs"

[[bin]]
name = "abc2xx_b_265"
path = "src/contest/2023/abc2xx/b/265/265.rs"

[[bin]]
name = "abc2xx_b_266"
path = "src/contest/2023/abc2xx/b/266/266.rs"

[[bin]]
name = "abc2xx_b_267"
path = "src/contest/2023/abc2xx/b/267/267.rs"

[[bin]]
name = "abc2xx_b_268"
path = "src/contest/2023/abc2xx/b/268/268.rs"

[[bin]]
name = "abc2xx_b_269"
path = "src/contest/2023/abc2xx/b/269/269.rs"

[[bin]]
name = "abc2xx_b_250"
path = "src/contest/2023/abc2xx/b/250/250.rs"

[[bin]]
name = "abc2xx_b_251"
path = "src/contest/2023/abc2xx/b/251/251.rs"

[[bin]]
name = "abc2xx_b_252"
path = "src/contest/2023/abc2xx/b/252/252.rs"

[[bin]]
name = "abc2xx_b_253"
path = "src/contest/2023/abc2xx/b/253/253.rs"

[[bin]]
name = "abc2xx_b_254"
path = "src/contest/2023/abc2xx/b/254/254.rs"

[[bin]]
name = "abc2xx_b_255"
path = "src/contest/2023/abc2xx/b/255/255.rs"

[[bin]]
name = "abc2xx_b_256"
path = "src/contest/2023/abc2xx/b/256/256.rs"

[[bin]]
name = "abc2xx_b_257"
path = "src/contest/2023/abc2xx/b/257/257.rs"

[[bin]]
name = "abc2xx_b_258"
path = "src/contest/2023/abc2xx/b/258/258.rs"

[[bin]]
name = "abc2xx_b_259"
path = "src/contest/2023/abc2xx/b/259/259.rs"


[[bin]]
name = "abc2xx_b_240"
path = "src/contest/2023/abc2xx/b/240/240.rs"

[[bin]]
name = "abc2xx_b_241"
path = "src/contest/2023/abc2xx/b/241/241.rs"

[[bin]]
name = "abc2xx_b_242"
path = "src/contest/2023/abc2xx/b/242/242.rs"

[[bin]]
name = "abc2xx_b_243"
path = "src/contest/2023/abc2xx/b/243/243.rs"

[[bin]]
name = "abc2xx_b_244"
path = "src/contest/2023/abc2xx/b/244/244.rs"

[[bin]]
name = "abc2xx_b_245"
path = "src/contest/2023/abc2xx/b/245/245.rs"

[[bin]]
name = "abc2xx_b_246"
path = "src/contest/2023/abc2xx/b/246/246.rs"

[[bin]]
name = "abc2xx_b_247"
path = "src/contest/2023/abc2xx/b/247/247.rs"

[[bin]]
name = "abc2xx_b_248"
path = "src/contest/2023/abc2xx/b/248/248.rs"

[[bin]]
name = "abc2xx_b_249"
path = "src/contest/2023/abc2xx/b/249/249.rs"


[[bin]]
name = "abc2xx_b_230"
path = "src/contest/2023/abc2xx/b/230/230.rs"

[[bin]]
name = "abc2xx_b_231"
path = "src/contest/2023/abc2xx/b/231/231.rs"

[[bin]]
name = "abc2xx_b_232"
path = "src/contest/2023/abc2xx/b/232/232.rs"

[[bin]]
name = "abc2xx_b_233"
path = "src/contest/2023/abc2xx/b/233/233.rs"

[[bin]]
name = "abc2xx_b_234"
path = "src/contest/2023/abc2xx/b/234/234.rs"

[[bin]]
name = "abc2xx_b_235"
path = "src/contest/2023/abc2xx/b/235/235.rs"

[[bin]]
name = "abc2xx_b_236"
path = "src/contest/2023/abc2xx/b/236/236.rs"

[[bin]]
name = "abc2xx_b_237"
path = "src/contest/2023/abc2xx/b/237/237.rs"

[[bin]]
name = "abc2xx_b_238"
path = "src/contest/2023/abc2xx/b/238/238.rs"

[[bin]]
name = "abc2xx_b_239"
path = "src/contest/2023/abc2xx/b/239/239.rs"

[[bin]]
name = "abc2xx_b_221"
path = "src/contest/2023/abc2xx/b/221/221.rs"

[[bin]]
name = "abc2xx_b_222"
path = "src/contest/2023/abc2xx/b/222/222.rs"

[[bin]]
name = "abc2xx_b_223"
path = "src/contest/2023/abc2xx/b/223/223.rs"

[[bin]]
name = "abc2xx_b_224"
path = "src/contest/2023/abc2xx/b/224/224.rs"

[[bin]]
name = "abc2xx_b_225"
path = "src/contest/2023/abc2xx/b/225/225.rs"

[[bin]]
name = "abc2xx_b_226"
path = "src/contest/2023/abc2xx/b/226/226.rs"

[[bin]]
name = "abc2xx_b_227"
path = "src/contest/2023/abc2xx/b/227/227.rs"

[[bin]]
name = "abc2xx_b_228"
path = "src/contest/2023/abc2xx/b/228/228.rs"

[[bin]]
name = "abc2xx_b_229"
path = "src/contest/2023/abc2xx/b/229/229.rs"

[[bin]]
name = "abc312_a"
path = "src/contest/2023/abc312/a.rs"

[[bin]]
name = "abc312_b"
path = "src/contest/2023/abc312/b.rs"

[[bin]]
name = "abc312_c"
path = "src/contest/2023/abc312/c.rs"

[[bin]]
name = "abc312_d"
path = "src/contest/2023/abc312/d.rs"

[[bin]]
name = "abc312_f"
path = "src/contest/2023/abc312/f.rs"


[[bin]]
name = "template"
path = "src/contest/template.rs"

[[bin]]
name = "template_test"
path = "src/contest/template_test.rs"

hoge = """

"""

[dependencies]

# スニペット用(AtCoderでは使えない)
# 参考: Rustで競技プログラミングをするときの"スニペット管理"をまじめに考える(cargo-snippetの紹介) - Qiita https://qiita.com/hatoo@github/items/5c6814e72ddd2ecaf48f
cargo-snippet = "0.6.5"


#----
#atcoder-rust-base/Cargo.toml at ja · rust-lang-ja/atcoder-rust-base · GitHub https://github.com/rust-lang-ja/atcoder-rust-base/blob/ja/Cargo.toml からコピー


# AtCoder 2020年言語アップデート以降に使用できるクレート。
# 次のページに各クレートについての細かい紹介があります。
# https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/2020-Update

# 数値型の抽象化、多倍長整数、複素数、分数、及び整数型の拡張
num = "=0.2.1"
#num-bigint = "=0.2.6"
#num-complex = "=0.2.4"
num-integer = "=0.1.42"
#num-iter = "=0.1.40"
#num-rational = "=0.2.4"
num-traits = "=0.2.11"

# `num-traits`の自動実装
num-derive = "=0.3.0"

# NumPyの`ndarray`のような多次元配列
ndarray = "=0.13.0"

# 線形代数
#nalgebra = "=0.20.0"

# (線形)代数の抽象化
#alga = "=0.9.3"

# libmのRust実装
#libm = "=0.2.1"

# 乱数
rand = { version = "=0.7.3", features = ["small_rng"] }
#getrandom = "=0.1.14"
#rand_chacha = "=0.2.2"
#rand_core = "=0.5.1"
#rand_hc = "=0.2.0"
#rand_pcg = "=0.2.1"

# 乱数の分布の追加
#rand_distr = "=0.2.2"

# グラフ
#petgraph = "=0.5.0"

# 挿入順を保持するhash table
#indexmap = "=1.3.2"

# 正規表現
regex = "=1.3.6"

# staticアイテムの遅延初期化
#lazy_static = "=1.4.0"

# `NotNan<f64>`, `OrderedFloat<f64>`
#ordered-float = "=1.0.2"

# ASCII文字列
#ascii = "=1.0.0"

# permutation
#permutohedron = "=0.2.4"

# スライスの拡張
#superslice = "=1.0.0"

# イテレータの拡張
itertools = "=0.9.0"

# イテレータの拡張（一次元累積和と浮動小数点数の等差数列）
#itertools-num = "=0.1.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`のリテラル用マクロ
#maplit = "=1.0.2"

# 即席enum `Either<L, R>`
#either = "=1.5.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`, `Vec`の永続データ構造版
#im-rc = "=14.3.0"

# 可変長bit set
#fixedbitset = "=0.2.0"

# 可変長bit set
#bitset-fixed = "=0.1.0"

# 競技プログラミングの入出力サポートその1
proconio = { version = "=0.3.6", features = ["derive"] }

# 競技プログラミングの入出力サポートその2
#text_io = "=0.1.8"

# 競技プログラミングの入出力サポートその3
whiteread = "=0.5.0"

# 高速なハッシュ関数
#rustc-hash = "=1.1.0"

# ある長さまでは要素を「直に」持つ可変長配列
#smallvec = "=1.2.0"

# ---------------------------------------------------------------------

[dev-dependencies]
cli_test_dir = "0.1"
